templates/cert-mananger/http01-template/LetsEncrypt/staging/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc
  namespace: abc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#          rewrite ^(/abc)$ $1/ redirect;
spec:
  tls:
    - hosts:
        - skalam.info
      secretName: abc
  rules:
  - host: skalam.info
    http:
      paths:
      - path: /abc
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-server-1
            port:
              number: 1234
